# rinku

./: .dockerignore  .gitignore  .replit  AGENTS.md  Cargo.toml  DAG_CONSENSUS.md  Dockerfile.activity-bot  Dockerfile.fly  README.md  RINKU_WHITEPAPER.txt  SECURITY.md  TESTNET_GUIDE.md  TLDR.md  WHITEPAPER.md  fly.activity-bot.toml  fly.toml  package-lock.json  package.json  replit.md
.cargo/: audit.toml
.github/: dependabot.yml
attached_assets/: Pasted--08-19-20-41-c9932934-System-metasidecar-loaded-enterpr_1767705681461.txt  Pasted--1-57-33-PM-DAG-Status-62-nodes-2-tips-1-57-33-PM-Fauce_1767362458790.txt  Pasted--1249c6fa-User-2026-01-21T17-15-45-232763Z-INFO-rinku-n_1769016652445.txt  Pasted--2026-01-21T00-59-22-134043Z-WARN-rinku-node-gossip-Fai_1768958191870.txt  Pasted--24-2026-01-21T17-08-24-424024Z-INFO-rinku-node-gossip-_1769015842913.txt  Pasted--33-31-2026-01-21T00-33-31-501307Z-INFO-rinku-node-stat_1768955639774.txt  Pasted--4-59-27-PM-Batch-TX-7-8-succeeded-via-batch-API-4-59-3_1767477718628.txt  Pasted--Finished-dev-profile-unoptimized-debuginfo-target-s-in_1768915795358.txt  Pasted--Gas-Price-0-0010-5-33-24-PM-DAG-Status-215-nodes-2-tip_1767480437783.txt  Pasted--HELP-process-cpu-user-seconds-total-Total-user-CPU-tim_1767556357886.txt  Pasted--HELP-process-cpu-user-seconds-total-Total-user-CPU-tim_1767565670743.txt  Pasted--HELP-process-cpu-user-seconds-total-Total-user-CPU-tim_1767569703150.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768180779509.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768180792274.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768182676761.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768352748437.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768352756607.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768355349068.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768355375668.txt  Pasted--HELP-rinku-dag-nodes-total-Total-number-of-nodes-in-th_1768617976663.txt  Pasted--Metrics-Logs-Errors-Certificates-Registry-Secrets-Toke_1768352939776.txt  Pasted--Stats-DAG-1-nodes-Accounts-1-Heap-10-MB-Stats-DAG-9-no_1767322494428.txt  Pasted--Stats-DAG-206-nodes-Accounts-62-Heap-159-MB-Faucet-err_1767316759177.txt  Pasted--Wallets-11-100-0-staking-2-w-contracts-Transactions-50_1767470323751.txt  Pasted--c1551785-User-2026-01-18T15-15-08-692340Z-INFO-rinku-n_1768749927355.txt  Pasted--fly-logs-a-rinku-node-Waiting-for-logs-00-34-36-Pullin_1768178197835.txt  Pasted--fly-logs-a-rinku-node-Waiting-for-logs-00-45-25-Settin_1768178955611.txt  Pasted--forwarding-local-port-5000-to-external-port-80-mapped-_1768948899978.txt  Pasted--rinku-core-0-1-0-build-tsc-rinku-faucet-0-1-0-dev-tsx-_1767313385929.txt  Pasted--rinku-core-0-1-0-build-tsc-rinku-node-0-1-0-dev-node-e_1767320653196.txt  Pasted--rinku-faucet-0-1-0-dev-tsx-watch-src-index-ts-Starting_1767314772697.txt  Pasted--rinku-node-0-1-0-build-tsc-src-tests-tokenomics-test-t_1767533824962.txt  Pasted--workspace-npm-run-p2p-test-rinku-0-1-0-p2p-test-npx-ts_1768843860417.txt  Pasted--workspace-npm-run-validate-http-localhost-3001-rinku-0_1767368087518.txt  Pasted--workspace-npm-run-validate-http-localhost-3001-rinku-0_1767368220159.txt  Pasted--workspace-npx-tsx-scripts-validate-multi-node-ts-https_1768750071348.txt  Pasted-00-13-06-Skipping-invalid-tx-0691bec27420f312418e501e10_1767485649891.txt  Pasted-00-13-34-2026-01-19T00-13-34-785094Z-INFO-rinku-node-ap_1768781717372.txt  Pasted-00-57-38-2026-01-17T00-57-38-727702Z-INFO-rinku-node-BL_1768611945102.txt  Pasted-00-59-50-2026-01-14T00-59-50-032535Z-INFO-rinku-node-St_1768352562695.txt  (+151 more)
docs/: VERSIONING.md  rinku.md
scripts/: TESTNET_SETUP.md  activity-bot-v2.ts  activity-bot.ts  check-network-health.ts  (+20 more)
(+32 files in other folders)
