[workspace]
resolver = "2"
members = [
    "packages/rinku-core",
    "packages/rinku-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rinku-ledger/rinku"

[workspace.dependencies]
# Crypto
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
sha2 = "0.10"
bls12_381 = "0.8"
blst = "0.3"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Networking/Gossip
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"] }

# DAG/Graph
petgraph = "0.6"

# Persistence
sled = "0.34"

# Compression
flate2 = "1.0"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"

# Utilities
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json"] }

# ZK-SNARKs (Groth16 on BN254/bn128)
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-relations = "0.4"

# Poseidon hash (circomlib-compatible)
light-poseidon = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
