[workspace]
resolver = "2"
members = [
    "packages/rinku-core",
    "packages/rinku-node",
    "packages/rinku-contract-sdk",
]
exclude = [
    "packages/rinku-chat-contract",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rinku-ledger/rinku"

[workspace.dependencies]
# Pin base64ct to avoid edition2024 requirement (for older Rust toolchains)
base64ct = "=1.8.3"

# Crypto
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
sha2 = "0.10"
bls12_381 = "0.8"
blst = "0.3"
hkdf = "0.13"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Networking/Gossip
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros", "request-response", "cbor", "identify"] }

# DAG/Graph
petgraph = "0.8"

# Persistence
sled = "0.34"
redb = "2.1"

# Compression
flate2 = "1.0"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.4"

# Erasure coding for Data Availability
reed-solomon-erasure = "6.0"

# Utilities
num_cpus = "1.16"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.31"

# TUI
ratatui = "0.30"
crossterm = "0.27"

# ZK-SNARKs (Groth16 on BN254/bn128)
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-relations = "0.4"

# Poseidon hash (circomlib-compatible)
light-poseidon = "0.2"

# WASM runtime
wasmi = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
